--- a/gatsby-craeft-dev-theme/styles/base.css
+++ b/gatsby-craeft-dev-theme/styles/base.css
@@ -9,11 +9,17 @@ em,
 dfn {
   font-style: italic;
 }
-h1 {
-  /* margin: 0.67em 0; */
+h1,
+h2 {
   margin: 0 0 0.5em;
+}
+h1 {
   font-size: 3em;
 }
+h2 {
+  font-size: 2em;
+}
+
 small {
   font-size: 80%;
 }
