--- a/gatsby-craeft-dev-theme/styles/base.css
+++ b/gatsby-craeft-dev-theme/styles/base.css
@@ -11,7 +11,8 @@ dfn {
 }
 
 h1,
-h2 {
+h2,
+h3 {
   margin: 0 0 0.5em;
 }
 h1 {
@@ -19,6 +20,9 @@ h1 {
 }
 h2 {
   font-size: 2em;
+}
+h3 {
+  font-size: 1.6rem;
 }
 
 small {
@@ -52,4 +56,21 @@ ul {
   border: none;
   outline: none;
   background: none;
+}
+
+.text-center {
+  text-align: center;
+}
+
+.underline {
+  text-decoration: underline;
+}
+
+.underline:hover,
+.underline:active {
+  text-decoration: none;
+}
+
+.monospace {
+  font-family: "Roboto Mono", monospace;
 }
