--- a/gatsby-craeft-dev-theme/styles/main.css
+++ b/gatsby-craeft-dev-theme/styles/main.css
@@ -22,10 +22,18 @@ body.light-theme {
   color: var(--theme-light-second-text-color);
 }
 
+body.light-theme .theme-link {
+  color: var(--theme-light-second-text-color);
+}
+
 /* ------------------ Dark Theme ------------------ */
 
 body.dark-theme {
   background-color: var(--theme-dark-main-bg-color);
+  color: var(--theme-dark-second-text-color);
+}
+
+body.dark-theme .theme-link {
   color: var(--theme-dark-second-text-color);
 }
 
