--- a/gatsby-craeft-dev-theme/styles/text-content.module.css
+++ b/gatsby-craeft-dev-theme/styles/text-content.module.css
@@ -4,6 +4,7 @@
   -webkit-font-smoothing: antialiased;
   font-size: 1.3rem;
   margin-bottom: 40px;
+  border-radius: 3px;
 }
 
 .inner {
@@ -16,6 +17,8 @@
 
 .image-inner {
   height: 100%;
+  border-top-left-radius: 3px;
+  border-top-right-radius: 3px;
 }
 
 .light {
